# nixified-gpt-cli

./: .gitignore  flake.nix  package.nix  pyproject.toml  result
