[tool.poetry]
name = "gptcli"
version = "0.2.0"
description = "Command-line interface for ChatGPT and Claude"
authors = ["Val Kharitonov <val@kharvd.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kharvd/gpt-cli"
keywords = ["cli", "command-line", "assistant", "openai", "claude", "cohere", "gpt-3", "gpt-4", "llm", "chatgpt", "gpt-cli", "anthropic", "gpt-client", "anthropic-claude"]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "0.25.9"
attrs = "23.2.0"
black = "24.4.2"
cohere = "5.5.3"
google-generativeai = "0.5.4"
mistralai = "0.1.8"
openai = "1.30.1"
prompt-toolkit = "3.0.43"
pytest = "7.3.1"
PyYAML = "6.0.1"
rich = "13.7.1"
typing-extensions = "4.11.0"

[tool.poetry.scripts]
gptcli = "gptcli.gpt:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
